# MapAI-Competition

./: .gitignore  README.md  check_latest_version.py  requirements_v2.txt  version.yaml
.github/web/: pyproject.toml
.github/web/src/: main.py
.github/web/src/templates/: index.html
.github/workflows/: build_report.yaml  evaluate.yml
competition_toolkit/: pyproject.toml
competition_toolkit/competition_toolkit/: dataloader.py  eval_functions.py  evaluation.py  evaluation_v2.py  version_extractor.py
data/: combine_data.py  reclassify_masks.py
mapai_results/: team_atelier_task_1.json  team_atelier_task_2.json  team_deepcrop_task_1.json  team_fundator_task_1.json  team_fundator_task_2.json  team_gisers_task_1.json  team_gisers_task_2.json  team_hvlml_task_1.json  team_hvlml_task_2.json  team_kaborg_task_1.json  team_kaborg_task_2.json  team_morty_task_1.json  team_morty_task_2.json  team_redpill_task_1.json  team_redpill_task_2.json  team_sf93_task_1.json  team_sf93_task_2.json  team_uiai_task_1.json  team_uiai_task_2.json  team_ysbs_task_1.json  team_ysbs_task_2.json
team_ATELIER/: README.md  pyproject.toml
team_ATELIER/src/: README.md  main.py  model_task_1.py  model_task_2.py  utils.py
team_Deepcrop/: README.md
team_Deepcrop/mmsegmentation/: README.md
team_Deepcrop/src/: eval_task2.sh  main.py  model_task_2-config.py  model_task_2.py  slurm.sh  slurm_debug.sh  train.py  train_ConvNet.py  train_ConvNet_aug.py  train_UNetFormer.py  train_segformer.py  train_withSOTA.py
team_GISers/: README.md  pyproject.toml
team_GISers/src/: README.md  main.py  model_task_1.py  model_task_1_v2.py  model_task_2.py  model_task_2_v2.py
team_atelier/src/: train.py  utils.py
team_deepcrop/: README.md
team_deepcrop/src/: eval_task2.sh  model_task_2.py  slurm_1.sh  train_FTUNetFormer.py
team_fundator/: .gitignore  README.md  prepare_data.sh  pyproject.toml  reclassify_data.sh  train_1024res.sh  train_task1.sh  train_task2.sh
team_fundator/src/: README.md  bio_ensemble.py  custom_dataloader.py  dataset_download.py  display_results.ipynb  download.py  ensemble_model.py  evaluate.py  expand_dims.py  main.py  model_task.py  model_task_1.py  model_task_2.py  multiclass_metrics.py  optimizers.py  predict_ensemble.py  save_ensemble_preds.py  test_subensembles.py  train.py  train_all.py  transforms.py  utils.py  visualize_data.ipynb  visualize_data.py
team_hvlml/: README.md  pyproject.toml
team_hvlml/src/: README.md  fastai_metrics.py  loss_functions.py  model_task_1.py  model_task_2.py  multispectral.py  training.py  utils.py
team_kaborg/src/: README.md  download_data.py  main.py  model_task_1.py  model_task_2.py  train.py  train_debugging.py  visualisation.py
team_morty/: README.md  pyproject.toml
team_morty/src/: Playground.ipynb  main.py  model_task_1.py  model_task_2.py  train.py  visualisation.py
team_redpill/: README.md
team_sf93/: pyproject.toml
team_template/: README.md
team_uiai/: pyproject.toml
team_ysbs/: README.md  pyproject.toml
(+762 files in other folders)
