[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "competition_toolkit"
version = "1.0.0"
description = "The Competition SDK"
keywords = []
license = {text = "MIT"}
classifiers = [
    "Programming Language :: Python :: 3",
]
dependencies = [
    "torch",
    "torchvision",
    "tqdm",
    "opencv-python",
    "numpy",
    "datasets",
    "tomli",
    "pandas",
    "pyarrow",
    "gdown",
    "matplotlib",
    "datasets",
    "segmentation-models-pytorch",
    "kornia",
    "tabulate",

]
dynamic = ["readme"]

[tool.setuptools.dynamic]
readme = {file = ["README.rst"]}

[tool.setuptools.packages.find]
where = ["."]  # list of folders that contain the packages (["."] by default)
include = ["*"]  # package names should match these glob patterns (["*"] by default)
exclude = [
    "node_modules*",
    "scripts*",
    "tests*",
    "venv*"
]  # exclude packages matching these glob patterns (empty by default)
